# co2-sensor-apple-homekit

./: .gitmodules  CMakeLists.txt  Dockerfile  DockerfileLocalBuild  README.md  build.sh  build_local.sh  docker_entry.sh  sdkconfig
.github/workflows/: Build.yml
doc/: classes.drawio  wiring.drawio
inc/: circular_buffer.hpp  co2_sensor.hpp  homekit_accessory.hpp  homekit_service.hpp  i2c_device.hpp  i2c_scanner.hpp
main/: CMakeLists.txt  Kconfig.projbuild
main/inc/: circular_buffer.hpp  circular_buffer_imp.hpp  co2_accessory.hpp  config.hpp  homekit_device.hpp  homekit_service.hpp  i2c_co2_sensor.hpp  i2c_device.hpp  i2c_device_impl.hpp  i2c_scanner.hpp  i2c_scanner_impl.hpp
main/src/: app_main.cpp  co2_accessory.cpp  co2_sensor.cpp  homekit_device.cpp  homekit_service_co2_sensor.cpp  homekit_service_humi_sensor.cpp  homekit_service_temp_sensor.cpp  i2c_co2_sensor.cpp  i2c_device.cpp  i2c_scanner.cpp
src/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  circular_buffer_imp.hpp  co2_sensor.cpp  i2c_device.cpp  i2c_device_impl.hpp  i2c_scanner.cpp  i2c_scanner_impl.hpp
